# Gloomhaven_Calculator

./: Gloomhaven-Calculator.cabal  LICENSE  Main.hs  README.md  moddeck.hs
Decks/: BannerSpear.json  BaseDeck.json  BeastTyrant.json  Berserker.json  BlinkBlade.json  Brute.json  Cragheart.json  Deathwalker.json  Demolitionist.json  Doomstalker.json  Drifter.json  Elementalist.json  Geminate.json  Hatchet.json  Mindthief.json  Necromancer.json  Nightshroud.json  Plagueherald.json  Quartermaster.json  RedGuard.json  Sawbones.json  Scoundrel.json  Soothsinger.json  Spellweaver.json  Summoner.json  Sunkeeper.json  Tinkerer.json  Voidwarden.json
Gloomhaven/: AttackModifierDeckCalculator.hs
