name:                Gloomhaven-Calculator
version:             0.1.0.0

category:            Game, Math, Statistics
synopsis:            An attack modifier deck calculator for the Gloomhaven board game

license:             BSD3
license-file:        LICENSE
author:              magras <magras@users.noreply.github.com>

homepage:            https://github.com/magras/Gloomhaven_Calculator

build-type:          Simple
cabal-version:       >=1.10

executable Gloomhaven-Calculator
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:
    Gloomhaven.AttackModifierDeckCalculator

  build-depends:
    aeson >=1.4 && <1.5,
    base >=4.11 && <4.12,
    bytestring >=0.10 && <0.11,
    containers >=0.5 && <0.6,
    optparse-applicative >=0.14 && <0.15,
    parsec >=3.1 && <3.2,
    tabular >=0.2 && <0.3
